# VirtualPet

./: CMakeLists.txt  README.md
header/: blackjack.h  card.h  connect4.h  gameManager.h  minigames.h  rockpaperscissors.h  tictactoe.h  virtualPet.h
src/: blackjack.cpp  card.cpp  connect4.cpp  gameManager.cpp  main.cpp  minigames.cpp  rockpaperscissors.cpp  tictactoe.cpp  virtualPet.cpp
tests/: blackjackTest.cpp  connect4Test.cpp  gameManagerTest.cpp  rockpaperscissorsTest.cpp  tictactoeTest.cpp  virtualPetTest.cpp
